[gd_scene load_steps=6 format=3 uid="uid://dkoqudq5k5v0g"]

[ext_resource type="Script" path="res://scripts/help_menu.gd" id="1_2kbwu"]
[ext_resource type="Texture2D" uid="uid://cgb7xk7rsjqm5" path="res://art/Clipboard.png" id="1_ai464"]
[ext_resource type="Texture2D" uid="uid://dq34fil3k1lsf" path="res://art/Arrow.png" id="3_4i2ly"]
[ext_resource type="Texture2D" uid="uid://boivemnv3wq7n" path="res://art/Disabled.png" id="4_aoijy"]
[ext_resource type="Texture2D" uid="uid://dunrom723wasi" path="res://art/X.png" id="4_npttg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2kbwu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -360.0
offset_right = 250.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ai464")

[node name="Title" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 114.0
offset_top = 149.0
offset_right = 414.0
offset_bottom = 249.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Everything is Fine"

[node name="Body" type="RichTextLabel" parent="TextureRect"]
unique_name_in_owner = true
offset_left = 49.0
offset_top = 200.0
offset_right = 449.0
offset_bottom = 560.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Everything is Fine. Everything is Fine. Everything is Fine. Everything is Fine. Everything is Fine. Everything is Fine. Everything is Fine. Everything is Fine. "

[node name="PreviousPage" type="TextureButton" parent="TextureRect"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 0
offset_left = 41.0
offset_top = 563.0
offset_right = 105.0
offset_bottom = 627.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_4i2ly")
texture_disabled = ExtResource("4_aoijy")
flip_h = true

[node name="NextPage" type="TextureButton" parent="TextureRect"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 0
offset_left = 334.0
offset_top = 563.0
offset_right = 398.0
offset_bottom = 627.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_4i2ly")
texture_disabled = ExtResource("4_aoijy")

[node name="CloseButton" type="TextureButton" parent="TextureRect"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 0
offset_left = 395.0
offset_top = 126.0
offset_right = 459.0
offset_bottom = 190.0
texture_normal = ExtResource("4_npttg")
